fix nav logo overflow, positioning of elements

--- a/ngVioletMarketplaceMaterial/src/app/components/footer/footer.component.scss
+++ b/ngVioletMarketplaceMaterial/src/app/components/footer/footer.component.scss
@@ -11,7 +11,6 @@ a {
 }
 
 .footer {
-  position: fixed;
   width: 100vw;
   height: 3.5em;
   left: 0px;
