--- a/ngVioletMarketplaceMaterial/src/scss/base/_base.scss
+++ b/ngVioletMarketplaceMaterial/src/scss/base/_base.scss
@@ -32,6 +32,8 @@ img {
 html,
 body {
   margin: 0px;
+  padding: 0;
+  overflow-x: hidden;
   height: 100%;
 }
 
